<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pantum</string>
    <string name="title_activity_main">Train Position</string>
    <string name="favorite_text">Favorite Stations</string>
    <string name="train_no">TRAIN NO:</string>
    <string name="train_destination">DESTINATION:</string>
    <string name="train_schedule">SCHEDULE:</string>
    <string name="train_position">POSITION:</string>
    <string name="train_line">LINE:</string>
    <string name="no_data">Please Select Station in Station List</string>
    <string name="connection_problem">Opps! There a problem with your Internet Connection. Please try again later.</string>
    <string name="credit_title">Credits</string>
    <string name="train_setting_refresh_interval">Refresh Interval</string>
    <string name="train_setting_auto_refresh">Auto Refresh</string>
    <string name="train_no_favorite">There\'s no favorite yet. Please select station and press favorite button (star shape).</string>
    <string name="train_no_internet_connection">There is not active Internet connection available. Please enable it and try again.</string>
    <string name="train_position_depart">DEP</string>
    <string name="train_position_at">AT</string>

    <string-array name="station_arrays">
        <item>Ancol</item>
        <item>Angke</item>
        <item>Batu Ceper</item>
        <item>Bekasi</item>
        <item>Bogor</item>
        <item>Bojonggede</item>
        <item>Bojong Indah</item>
        <item>Buaran</item>
        <item>Cakung</item>
        <item>Cawang</item>
        <item>Cicayur</item>
        <item>Cikini</item>
        <item>Cikoya</item>
        <item>Cilebut</item>
        <item>Cileujit</item>
        <item>Cisauk</item>
        <item>Citayam</item>
        <item>Daru</item>
        <item>Depok</item>
        <item>Depok Baru</item>
        <item>Duren Kalibata</item>
        <item>Duri</item>
        <item>Gambir</item>
        <item>Gang Sentiong</item>
        <item>Gondangdia</item>
        <item>Jakarta Kota</item>
        <item>Jatinegara</item>
        <item>Jayakarta</item>
        <item>Juanda</item>
        <item>Jurangmangu</item>
        <item>Kalideres</item>
        <item>Kampung Bandan</item>
        <item>Karet</item>
        <item>Kebayoran</item>
        <item>Kemayoran</item>
        <item>Klender</item>
        <item>Klender Baru</item>
        <item>Kramat</item>
        <item>Kranji</item>
        <item>Lenteng Agung</item>
        <item>Maja</item>
        <item>Mangga Besar</item>
        <item>Manggarai</item>
        <item>Palmerah</item>
        <item>Parung Panjang</item>
        <item>Pasar Minggu</item>
        <item>Pasar Minggu Baru</item>
        <item>Pasar Senen</item>
        <item>Pesing</item>
        <item>Pondok Cina</item>
        <item>Pondok Ranji</item>
        <item>Pondok Jati</item>
        <item>Poris</item>
        <item>Rajawali</item>
        <item>Rawa Buaya</item>
        <item>Rawa Buntu</item>
        <item>Sawah Besar</item>
        <item>Serpong</item>
        <item>Sudimara</item>
        <item>Sudirman</item>
        <item>Tanah Abang</item>
        <item>Tanggerang</item>
        <item>Tanjung Barat</item>
        <item>Tanjung Priok</item>
        <item>Tebet</item>
        <item>Tenjo</item>
        <item>Tigaraksa</item>
        <item>Universitas Indonesia</item>
        <item>Universitas Pancasila</item>
    </string-array>
    <string-array name="drawer_menu">
        <item>Home Page</item>
        <item>Station List</item>
        <item>Position</item>
    </string-array>
    <string-array name="refresh_interval">
        <item>10 Seconds</item>
        <item>30 Seconds</item>
        <item>1 Minute</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>30 Minutes</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Refresh Position</string>
    <string name="action_map">Show location in Map</string>
    <string name="action_favorite">Add to Favorite</string>
    <string name="title_map_activity">Map</string>
    <string name="train_station_string_format">%s Station</string>
    <string name="train_setting_auto_refresh_enabled">ON - You have turn on Auto Refresh</string>
    <string name="train_setting_auto_refresh_disabled">OFF - You have turn off Auto Refresh</string>
    <string name="train_setting_auto_refresh_interval">You have set Auto Refresh in %s</string>
    <string name="train_position_refresh_start">Refreshing....</string>
    <string name="train_position_refresh_end">Refreshed</string>
    <string name="title_activity_main_page">Pantum</string>
    <string name="title_activity_cctvmain_page">CCTV</string>
    <string name="title_activity_cctvview">View CCTV</string>
    <string name="action_video">Show as Video</string>
    <string name="action_picture">Show as Picture</string>
    <string name="title_activity_setting">Settings</string>
    <string name="setting_train_group">Train Position Options</string>
    <string name="setting_cctv_group">View CCTV Options</string>

</resources>