<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh"
        android:visible="true"/>
    <item
        android:id="@+id/action_video"
        android:icon="@drawable/ic_action_video"
        android:showAsAction="ifRoom"
        android:title="@string/action_video"
        android:visible="true"/>
    <item
        android:id="@+id/action_picture"
        android:icon="@drawable/ic_action_picture"
        android:showAsAction="ifRoom"
        android:title="@string/action_picture"
        android:visible="false"/>
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_action_not_important"
        android:showAsAction="ifRoom"
        android:title="@string/action_favorite"
        android:visible="true"/>

</menu>